# SoundcloudDownloader

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: download.yml  python-tests.yml
soundclouddownloader/: __init__.py  cli_entry.py  dataclass.py  main.py  utils.py
tests/: test_soundcloud_downloader.py  test_utils.py
