[tool.poetry]
name = "soundclouddownloader"
version = "0.1.0"
description = ""
authors = ["Kyle Cain <kylecain.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
yt-dlp = "^2025.3.21"
loguru = "^0.7.3"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
